删除无用图片，修改标题

--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
   />
   <link href="%PUBLIC_URL%/logo192.png" rel="apple-touch-icon"/>
   <link href="%PUBLIC_URL%/manifest.json" rel="manifest"/>
-  <title>哈尼记账</title>
+  <title>时光记账</title>
 </head>
 <body>
   <div id="root"></div>
